# NeuralForge-Agents

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  push_to_github.py  pyproject.toml  requirements.txt  setup.py
agents/: __init__.py  base.py  coder.py  critic.py  researcher.py
api/: __init__.py  server.py
cli/: __init__.py  main.py
configs/: default.yaml
core/: __init__.py  engine.py  memory.py  neural_net.py  optimizer.py
examples/: basic_pipeline.yaml  complex_pipeline.yaml  custom_agent.py  multi_agent_pipeline.py  neural_network_training.py
neuralforge/: __init__.py
neuralforge/agents/: __init__.py  base.py  coder.py  registry.py  researcher.py  reviewer.py
neuralforge/cli/: main.py
neuralforge/core/: __init__.py  context.py  dag.py  engine.py  state.py
neuralforge/middleware/: __init__.py  cache.py  circuit_breaker.py  rate_limiter.py  retry.py
neuralforge/observability/: __init__.py  logger.py  metrics.py  tracer.py
neuralforge/pipeline/: __init__.py  loader.py  templates.py  validator.py
neuralforge/web/: __init__.py  app.py
observability/: __init__.py  logger.py  metrics.py  tracer.py
pipeline/: __init__.py  orchestrator.py  task_queue.py  workflow.py
tests/: __init__.py  test_agents.py  test_dag.py  test_engine.py  test_middleware.py  test_neural_net.py  test_pipeline.py
