[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuralforge"
version = "0.1.0"
description = "AI Pipeline Orchestration Framework — DAG-based execution engine with intelligent agents, middleware stack, and observability."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "NeuralForge Contributors" }]
keywords = ["ai", "pipeline", "orchestration", "dag", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
cli = ["typer>=0.12"]
web = ["fastapi>=0.110", "uvicorn>=0.27"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]
all = ["neuralforge[cli,web,dev]"]

[project.scripts]
neuralforge = "neuralforge.cli.main:main"

[project.urls]
Homepage = "https://github.com/sickagents/neuralforge"
Documentation = "https://github.com/sickagents/neuralforge#readme"
Repository = "https://github.com/sickagents/neuralforge"
Issues = "https://github.com/sickagents/neuralforge/issues"

[tool.hatch.build.targets.wheel]
packages = ["neuralforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
